[DEV-4215-chart-time-slider-pt2] CSS fix for spacing issue related to responsive ticks

--- a/packages/core/styles/v2/main.scss
+++ b/packages/core/styles/v2/main.scss
@@ -27,6 +27,9 @@
   .subtext {
     margin-top: 1em;
   }
+  .subtext--responsive-ticks {
+    margin-top: 3em;
+  }
 
   .warning {
     padding: 0.75em 1em;
